--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ certifi==2022.12.7
 charset-normalizer==3.0.1
 idna==3.4
 pcpi==0.6.5
+python-dateutil==2.8.2
 PyYAML==5.4.1
 requests==2.28.2
+six==1.16.0
 urllib3==1.26.14
