--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-certifi==2022.12.7
-charset-normalizer==3.0.1
-idna==3.4
-pcpi==0.8.1
-python-dateutil==2.8.2
+certifi==2024.2.2
+charset-normalizer==3.3.2
+idna==3.6
+pcpi==0.9.1
+python-dateutil==2.9.0.post0
 PyYAML==6.0.1
-requests==2.28.2
+requests==2.31.0
 six==1.16.0
-urllib3==1.26.14
+urllib3==2.2.1
